<resources>
    <string name="app_name">Place zabaw</string>
    <string name="app_version">v0.0.666</string>
    <string name="sign_up">Zarejestruj się</string>
    <string name="log_in">Zaloguj się</string>
    <string name="see_demo">Zobacz demo</string>
    <string name="title_activity_login_screen">Zaloguj</string>
    <string name="title_activity_main_screen">Pulpit</string>
    <string name="title_activity_search_screen">Wyszukaj</string>

    <!-- Main Screen -->
    <string name="your_playgrounds">Twoje place zabaw</string>
    <string name="find_your_playground">Znajdź plac zabaw</string>

    <!-- Hamburger menu -->
    <string name="hamburger_menu_profile">Mój profil</string>
    <string name="hamburger_menu_add_playground">Dodaj plac zabaw</string>
    <string name="hamburger_menu_delete_playground">Usuń plac zabaw</string>
    <string name="hamburger_menu_report">Zgłoś błąd</string>
    <string name="hamburger_menu_log_out">Wyloguj</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- Strings related to login -->
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Hasło</string>
    <string name="action_sign_in">Zaloguj się lub zarejestruj</string>
    <string name="action_sign_in_short">Zaloguj</string>
    <string name="error_invalid_email">Niepoprawny adres email</string>
    <string name="error_invalid_password">Hasło jest za krótkie</string>
    <string name="error_incorrect_password">Hasło nieprawidłowe</string>
    <string name="error_field_required">To pole jest wymagane</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Place zabaw</string>
    <string name="nav_header_subtitle">Wyszukuj, odwiedzaj, oceniaj!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_search">Wyszukaj</string>
    <string name="prompt_street">Ulica, osiedle, plac&#8230;</string>
    <string name="search_filters_extra">Dodatkowe filtry</string>
    <string name="search_filter_price">Cena</string>
    <string name="search_filter_entry_free">Wstęp wolny</string>
    <string name="prompt_price_from">Cena od:</string>
    <string name="prompt_price_to">Cena do:</string>
    <string name="prompt_rating_from">Ocena od:</string>
    <string name="prompt_rating_to">Ocena do:</string>
    <string name="prompt_functionalities">Kliknij, aby dodać funkcjonalności</string>
    <string name="logout_alert">Czy na pewno chcesz się wylogować?</string>
    <string name="confirm">Tak</string>
    <string name="cancel">Nie</string>
    <string name="click_to_get_features">Kliknij, aby dodać funkcjonalności</string>
    <string name="search_result_text">Wyniki wyszukiwania:</string>
    <string name="title_activity_playground_details_screen">PlaygroundDetailsScreen</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_register">Register</string>
    <string name="prompt_name">Imię i nazwisko</string>
    <string name="action_register">Rejestruj</string>
    <string name="acceptance_of_regulations">Akceptuję regulamin</string>
    <string name="rodo_text">Wyrażam zgodę na przetwarzanie danych osobowych przez Place Zabaw Sp. z o.o. z siedzibą przy ul. Łukasiewicza 8, 50-337 Wrocław, w celu zapewnienia prawidłowego funkcjonowania serwisu</string>
    <string name="marketing_content">Wyrażam zgode na przesyłanie treści marketingowych na podanych wyżej adres e-mail</string>
    <string name="error_password_not_identical">Hasła muszą być takie same!</string>
    <string name="prompt_repeat_password">Powtórz hasło</string>
    <string name="profile_date">Użytkownik od: </string>
    <string name="number_of_ratings">Liczba ocen: </string>
    <string name="number_of_reports">Liczba zgłoszeń: </string>
    <string name="title_activity_profile_screen">Twój profil</string>
    <string name="user_name">Name und Vorname</string>
    <string name="prompt_playground_address">Adres miejsca</string>
    <string name="type">Typ</string>
    <string name="prompt_price">Cena</string>
    <string name="playground_description_input">Wprowadź opis placu zabaw</string>
    <string name="playground_description_hint">Opis placu</string>
    <string name="playground_functionalities_hint">Funkcjonalności</string>
    <string name="action_add">Dodaj</string>
    <string name="add_photo_hint">Dodaj zdjęcie</string>
    <string name="title_activity_add_playground_screen">Dodaj plac zabaw</string>
    <string name="no_gps">GPS niedostępny</string>

    <!-- Strings related to the playground details-->
    <string name="rates">Oceny</string>
    <string name="find">Znajdź</string>
    <string name="report_error">Zgłoś błąd</string>
    <string name="features">Funkcjonalności</string>
    <string name="description">Opis</string>
    <string name="add_comment">Dodaj komentarz</string>
    <string name="features_default">tu będzie lista funkcjonalności&#8230;</string>

    <!-- Content description -->
    <string name="ic_search">Ikona lupy</string>
    <string name="ic_add">Ikona dodawania</string>
    <string name="ic_photo">Ikona zdjęcia</string>
    <string name="ic_share">Ikona udostępnienia</string>
    <string name="ic_gps">Ikona GPS</string>

    <!-- Miscellanous strings -->
    <string name="lipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec risus erat. Quisque sit amet libero sed ex luctus suscipit. Sed at turpis maximus, efficitur orci eu, tempor sem. Vestibulum suscipit lectus ac mauris tincidunt dictum. Mauris vitae ligula tristique purus commodo porta in eu magna. Duis vestibulum tellus eu enim euismod gravida. Praesent ornare risus sed luctus semper. Suspendisse tincidunt, nibh facilisis porttitor tempor, purus elit aliquam sapien, in rutrum nulla eros et massa. Nullam ut auctor quam, a cursus sapien. Donec eu euismod orci, et elementum nisl. Aenean scelerisque bibendum ex sit amet volutpat. Vivamus pellentesque hendrerit lorem ut auctor. Maecenas tristique eros vel ornare volutpat. Fusce et massa ullamcorper, egestas neque eu, tincidunt risus. Donec cursus urna sit amet vulputate rhoncus. Nulla mi ex, mattis ut consectetur at, aliquam vel velit.\n\nCurabitur fringilla purus sit amet arcu maximus, at volutpat neque pulvinar. Mauris feugiat in tellus quis fermentum. Pellentesque volutpat turpis sed pretium bibendum. Donec viverra volutpat purus ut pulvinar. Sed est eros, rhoncus et sapien id, eleifend tempor lacus. Donec sagittis ex ut fermentum condimentum. Suspendisse pellentesque sem sodales neque pellentesque lobortis. In tempor turpis nec risus ultricies, porta eleifend eros posuere. Morbi egestas, magna et aliquet consequat, sem ipsum pulvinar urna, tristique ultricies sapien elit vel tortor. Donec ornare elementum quam, ut convallis est interdum at. Aenean quis lacus diam. Etiam nisl mauris, lacinia sit amet aliquet eget, facilisis vitae ante. Sed aliquet, risus at gravida semper, dui dui blandit enim, eu viverra elit arcu at ligula. Aenean et diam ligula. Cras quis ex dictum, viverra ligula efficitur, bibendum massa. Nulla cursus non arcu quis pellentesque.\n\nNunc in nunc dapibus, auctor justo sit amet, elementum risus. Morbi hendrerit nunc neque, eu malesuada est vulputate vel. Pellentesque erat quam, ullamcorper ac pretium vel, mattis quis mi. Vivamus sagittis posuere justo eget accumsan. Vivamus vitae nibh ut sapien sollicitudin ullamcorper. Aliquam viverra eros dui, eget iaculis erat finibus sed. Aenean nisl nisi, efficitur sed convallis quis, molestie sed mi. Nullam in porta felis. Nullam ac turpis feugiat quam elementum accumsan nec eget mi.</string>
    <string name="report_description_input">Wprowadź dodatkowe informacje</string>
    <string name="report_description_hint">Dodatkowe informacje</string>
    <string name="report_type">Powód zgłoszenia</string>
    <string name="action_delete">Usuń</string>
    <string name="title_activity_delete_playground_screen">Usuń plac</string>
    <string name="reason_delete">Powód</string>
    <string name="delete_description_hint">Dodatkowe informacje</string>
    <string name="delete_description_input">Wprowadź dodatkowe informacje</string>
    <string name="title_activity_report_playground_screen">Zgłoś błąd</string>
    <string name="no_image_picked">Nie wybrano żadnego zdjęcia</string>
    <string name="something_wrong">Coś poszło nie tak</string>
    <string name="action_report">Zgłoś</string>
    <string name="prompt_rating">Ocena</string>
    <string name="report_comment_hint">Komentarz</string>
    <string name="report_comment_input">Tutaj wpisz swoją opinię</string>
    <string name="action_add_comment">Oceń</string>
    <string name="request_sent">Twoje zgłoszenie zostało wysłane. Zostanie rozpatrzone przez administratora tak szybko, jak to możliwe.</string>
    <string name="title_activity_add_comment_playground_screen">Oceń</string>
    <string name="playground_address_default">Adres placu zabaw</string>
    <string name="playground_street_default">Nazwa ulicy i numer</string>
    <string name="playground_town_default">Miejscowość</string>
    <string name="distance_default">- km</string>
    <string name="rating">Ocena</string>

    <!-- Strings related to the playground search -->
    <string name="search_feature_list_header">Funkcjonalności:</string>
    <string name="search_feature_list_hint">Naciśnij ikonkę, aby wybrać funkcjonalności z listy&#8230;</string>
</resources>
