<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileScreen"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/title_activity_profile_screen"
        app:titleTextColor="#fff" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <ImageView
            android:id="@+id/profile_photo"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@android:drawable/ic_menu_gallery"
            android:layout_marginBottom="30dp"/>

        <TextView
            android:id="@+id/user_name_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textSize="32sp"
            android:textColor="@color/colorStandardText"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:id="@+id/profile_date_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_date"
            android:textSize="24sp"
            android:textColor="@color/colorStandardText"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/number_of_ratings_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/number_of_ratings"
            android:textSize="24sp"
            android:textColor="@color/colorStandardText"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/number_of_reports_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/number_of_reports"
            android:textSize="24sp"
            android:textColor="@color/colorStandardText" />

    </LinearLayout>



</LinearLayout>