<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".AddCommentScreen">


    <!-- toolbar -->
    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/title_activity_add_comment_playground_screen"
        app:titleTextColor="#fff" >

    </android.support.v7.widget.Toolbar>

    <!-- fields -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <LinearLayout
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:orientation="vertical">

            <TextView
                android:layout_height="fill_parent"
                android:layout_width="wrap_content"
                android:text="@string/prompt_playground_address" />


            <TextView
                android:id="@+id/addressTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="Address"/>


            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/prompt_rating" />

            <RatingBar
                android:id="@+id/ratingBar"
                android:numStars="5"
                android:stepSize="0.5"
                android:rating="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_height="fill_parent"
                android:layout_width="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/report_comment_hint" />

            <EditText
                android:id="@+id/report_comment_edit_view"
                android:gravity="start"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:maxLines="6"
                android:lines="6"
                android:hint="@string/report_comment_input" />


            <TextView
                android:layout_height="fill_parent"
                android:layout_width="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/add_photo_hint" />

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:id="@+id/gallery">
                    </LinearLayout>
                    <ImageButton
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:src="@android:drawable/ic_menu_add"
                        android:scaleType="fitXY"
                        android:onClick="onAddPhotoClick" />
                </LinearLayout>
            </HorizontalScrollView>

            <Button
                android:id="@+id/send_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginTop="16dp"
                android:background="@color/button_red"
                android:fontFamily="@font/roboto"
                android:textStyle="bold"
                android:textColor="#fff"
                android:onClick="onSendButtonClick"
                android:layout_marginBottom="10dp"
                android:drawableStart="@android:drawable/ic_menu_send"
                android:drawablePadding="20dp"
                android:scaleType="fitStart"
                android:adjustViewBounds="true"
                android:text="@string/action_add_comment"
                android:textAlignment="center"
                android:paddingHorizontal="50dp" />


        </LinearLayout>


    </ScrollView>

</LinearLayout>