<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeleteScreen"
    android:orientation="vertical">

    <!-- toolbar -->
    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/title_activity_delete_playground_screen"
        app:titleTextColor="#fff" >

    </android.support.v7.widget.Toolbar>

    <!-- fields -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <LinearLayout
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:orientation="vertical">

            <TextView
                android:layout_height="fill_parent"
                android:layout_width="wrap_content"
                android:text="@string/prompt_playground_address" />

            <!-- Search field -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="302dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true">

                    <AutoCompleteTextView
                        android:id="@+id/address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_playground_address"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <ImageButton
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:adjustViewBounds="true"
                    android:background="@color/colorPrimary"
                    android:padding="3dp"
                    android:scaleType="fitCenter"
                    android:onClick="onLocationButtonClick"
                    android:src="@android:drawable/ic_menu_mylocation" />
            </RelativeLayout>


            <TextView
                android:layout_height="fill_parent"
                android:layout_width="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/reason_delete" />

            <Spinner
                android:id="@+id/delete_reason_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/delete_reasons_array"/>


            <TextView
                android:layout_height="fill_parent"
                android:layout_width="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/delete_description_hint" />

            <EditText
                android:id="@+id/report_description_edit_view"
                android:gravity="start"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:maxLines="6"
                android:lines="6"
                android:hint="@string/delete_description_input" />




            <TextView
                android:layout_height="fill_parent"
                android:layout_width="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/add_photo_hint" />

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:id="@+id/gallery">
                    </LinearLayout>
                    <ImageButton
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:src="@android:drawable/ic_menu_add"
                        android:scaleType="fitXY"
                        android:onClick="onAddPhotoClick" />
                </LinearLayout>
            </HorizontalScrollView>

            <Button
                android:id="@+id/send_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginTop="16dp"
                android:background="@color/button_red"
                android:fontFamily="@font/roboto"
                android:textStyle="bold"
                android:textColor="#fff"
                android:onClick="onSendButtonClick"
                android:layout_marginBottom="10dp"
                android:drawableStart="@android:drawable/ic_menu_send"
                android:drawablePadding="20dp"
                android:scaleType="fitStart"
                android:adjustViewBounds="true"
                android:text="@string/action_delete"
                android:textAlignment="center"
                android:paddingHorizontal="50dp" />


        </LinearLayout>


    </ScrollView>

</LinearLayout>